--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   video_player: ^2.4.7
   page_transition: ^2.0.9
   typewritertext: ^1.6.0
+  list_wheel_scroll_view_x: ^0.0.2
+  swipe: ^0.0.1
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
