--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   list_wheel_scroll_view_x: ^0.0.2
   swipe: ^0.0.1
   date_time_picker: ^2.1.0
+  url_launcher: ^6.1.5
+  awesome_snackbar_content: ^0.0.8
 
 dev_dependencies:
   flutter_test:
